This update fixes grid spacing problems.

--- a/mind-sam-frontend/src/Button/Button.css
+++ b/mind-sam-frontend/src/Button/Button.css
@@ -7,7 +7,7 @@
     --indigo-dye: #084b83ff;  
   }
 .button{
-    padding:3%;
+    padding:2%;
     border-radius: 20%;
     font-family: 'Comfortaa','sans-serif';
     font-size: larger;
