--- a/mind-sam-frontend/src/Inventory/Home/Inventory.css
+++ b/mind-sam-frontend/src/Inventory/Home/Inventory.css
@@ -10,10 +10,8 @@
 
 .grid {
 
-  grid-template-rows: repeat(12, 1fr);
-  grid-template-columns: repeat(12, 1fr);
-gap:0 0 0 0 ;
-margin: 0 0 0 0;
+ grid: repeat(minmax(12, 1fr)/ repeat(12, 1fr));
+height: 200vh;
 }
 
 .navigation{
@@ -21,6 +19,7 @@ margin: 0 0 0 0;
   grid-column: 1/span 12;
 }
 .title{
+
   grid-row: 2/3;
   grid-column: 1/span 12;
 
@@ -29,6 +28,8 @@ text-align: center;
 .createButton {
   grid-row: 3/4;
   grid-column: 6/span 4;
+  text-align: center;
+  
 }
 
 
