--- a/mind-sam-frontend/src/chat/Chat.css
+++ b/mind-sam-frontend/src/chat/Chat.css
@@ -6,21 +6,22 @@
 --indigo-dye: #084b83ff;    
 }
 
-.grid{
-    display: grid;
-    grid-template-rows: repeat(12,1fr);
-    grid-template-columns: repeat(12,1fr);
-    }
+.grid {
+
+    grid: repeat(minmax(12, 1fr)/ repeat(12, 1fr));
+   height: 200vh;
+   }
+   
 .navigation{
     grid-row: 1/2;
     grid-column: 1/span 12;
   }
 .chatText{
     grid-row: 5/6;
-    grid-column:6/span 4;
+    grid-column:6/7;
 font-size: medium;
  word-wrap: break-word;
-border-radius: 20%;
+border-radius: 10%;
  background-color:var(--xanthous)
 }
 
@@ -28,7 +29,10 @@ border-radius: 20%;
     grid-row:7/11;
     grid-column: 6/span 4;
 }
-
+.chatButton{
+    grid-row: 11/12;
+    grid-column: 6/span 4;
+}
 .chatButton:hover{
     color:var(--cardinal);
 }
