--- a/mind-sam-frontend/src/navigation/Navigation.css
+++ b/mind-sam-frontend/src/navigation/Navigation.css
@@ -17,7 +17,7 @@
 }
 
 .navigationBar li {
-    display: inline-block;
+    display: block;
     padding: 3% 3% 3% 3%;
 }
 
